@@ -4,22 +4,25 @@ OFF_ctx.view.winPos=16
 OFF_ctx.view.clipPlanes=32
 OFF_ctx.view.nb_clipPlanes=200
 OFF_ctx.view.dproj=204
-OFF_ctx.poly.cmdFacet=244
-OFF_ctx.poly.cmdFacet.size=248
-OFF_ctx.poly.cmdFacet.color=252
-OFF_ctx.poly.cmdFacet.rendering_type=256
-OFF_ctx.poly.vectors=260
-OFF_ctx.poly.z_alpha=1820
-OFF_ctx.poly.scan_dir=1856
-OFF_ctx.poly.nc_dir=1860
-OFF_ctx.poly.first_vector=1864
-OFF_ctx.poly.nb_params=1868
-OFF_ctx.poly.nc_log=1872
-OFF_ctx.line.count=1976
-OFF_ctx.line.w=1980
-OFF_ctx.line.dw=1984
-OFF_ctx.line.decliv=1988
-OFF_ctx.line.ddecliv=1992
-OFF_ctx.line.param=1996
-OFF_ctx.line.dparam=2008
-OFF_shared.buffers=262164
+OFF_ctx.poly.cmdFacet=248
+OFF_ctx.poly.cmdFacet.size=252
+OFF_ctx.poly.cmdFacet.color=256
+OFF_ctx.poly.cmdFacet.rendering_type=260
+OFF_ctx.poly.vectors=264
+OFF_ctx.poly.z_alpha=1824
+OFF_ctx.poly.scan_dir=1860
+OFF_ctx.poly.nc_dir=1864
+OFF_ctx.poly.first_vector=1868
+OFF_ctx.poly.nb_params=1872
+OFF_ctx.poly.nc_log=1876
+OFF_ctx.location.txt.address=220
+OFF_ctx.location.txt_mask=244
+OFF_ctx.line.count=1980
+OFF_ctx.line.w=1984
+OFF_ctx.line.dw=1988
+OFF_ctx.line.decliv=1992
+OFF_ctx.line.ddecliv=1996
+OFF_ctx.line.param=2000
+OFF_ctx.line.dparam=2012
+OFF_shared.buffers=262144
+BUFFERS_ADDR=0x50000
