@@ -21,16 +21,7 @@
  * Public Functions
  */
 
-uint32_t gpuColor(unsigned r, unsigned g, unsigned b) {
-#ifdef GP2X
-	uint32_t y = ((r<<9)+(g<<8)+(b<<8)+(r<<14)+(g<<15)+(b<<11)+(b<<12)+0x108000U)&0xFF0000U;
-	uint32_t u = ((b<<7)-(b<<4)-(r<<5)-(r<<2)-(r<<1)-(g<<6)-(g<<3)-(g<<1)+0x8080U)&0xFF00U;
-	uint32_t v = ((r<<23)-(r<<20)-(g<<21)-(g<<22)+(g<<17)-(b<<20)-(b<<17)+0x80800000U)&0xFF000000U;
-	return (v|y|u|(y>>16));
-#else
-	return (r<<11)|(g<<5)|(b);
-#endif
-}
+extern inline uint32_t gpuColor(unsigned r, unsigned g, unsigned b);
 
 gpuErr gpuLoadImg(struct buffer_loc const *loc, uint8_t (*rgb)[3], unsigned nb_lod) {
 	(void)nb_lod;
